Rename app from your-finance to wallet-buddy

--- a/config/buffalo-app.toml
+++ b/config/buffalo-app.toml
@@ -1,5 +1,5 @@
-name = "your-finance"
-bin = "bin/your-finance"
+name = "wallet-buddy"
+bin = "bin/wallet-buddy"
 vcs = "git"
 with_pop = true
 with_sqlite = false
